scrollbar no longer visible on desktop for grid list

--- a/client/src/custom_components/css/app_container.css
+++ b/client/src/custom_components/css/app_container.css
@@ -18,6 +18,14 @@
     flex-wrap: nowrap;
 }
 
+.content_list {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+.content_list::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+
 #app_container .button_container {
     padding-top: 24px;
     margin: auto;
